✨ feat: add const

--- a/src/test/test1.html
+++ b/src/test/test1.html
@@ -10,7 +10,8 @@
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel">
-      const v_dom = <h1>Hello, react!</h1>
+      const hello = "Hello, react!"
+      const v_dom = <h1>{hello}</h1>
       ReactDOM.render(v_dom, document.getElementById('test'))
     </script>
   </body>
