✨ feat: add function

--- a/src/test/test1.html
+++ b/src/test/test1.html
@@ -29,7 +29,10 @@
             }
           </ul>
         </h1>
-      ReactDOM.render(v_dom, document.getElementById('test'))
+      function TestFunction() {
+        return v_dom
+      }
+      ReactDOM.render(<TestFunction/>, document.getElementById('test'))
     </script>
   </body>
 </html>
