--- a/src/test/test1.html
+++ b/src/test/test1.html
@@ -24,7 +24,11 @@
           <ul>
             {
               hello.map((item, index)=>{
-                return <li key={index}>{item}</li>
+                return (
+                  <li key={index}>
+                    {item}
+                  </li>
+                )
               })
             }
           </ul>
