🐞 fix: didn't refresh when add

--- a/src/test/lifecycle.html
+++ b/src/test/lifecycle.html
@@ -38,7 +38,7 @@
       }
       shouldComponentUpdate() {
         console.log('shouldComponentUpdate')
-        return null
+        return true
       }
       addNum = () => {
         console.log('addNum')
