🐞 fix: solve warning

--- a/src/test/lifecycle.html
+++ b/src/test/lifecycle.html
@@ -47,6 +47,7 @@
       }
       getSnapshotBeforeUpdate() {
         console.log('getSnapshotBeforeUpdate')
+        return null
       }
       componentDidUpdate() {
         console.log('componentDidUpdate')
